--- a/internal/views/admin/products.html
+++ b/internal/views/admin/products.html
@@ -8,6 +8,7 @@
     <a href="/admin/sales">Ventas</a>
     <a href="/admin/destacada">Destacada</a>
     <a href="/admin/costs">Calculadora</a>
+    <a href="/admin/cupones">Cupones</a>
     <a href="/admin/logout" class="admin-nav-logout">Salir</a>
   </nav>
 </div>
